--- a/mytiago_tmule/tmule/tiago_sim.yaml
+++ b/mytiago_tmule/tmule/tiago_sim.yaml
@@ -26,10 +26,15 @@ init_cmd: |
   # robot specific arguments
   export_default TIAGO_EE "false"
   export_default TIAGO_TYPE "iron"
-  export_default TIAGO_POSE "-2.679354 -5.203607 0.014295 0 0 1.570069"
+  export_default TIAGO_x "-6.0"
+  export_default TIAGO_y "0.0"
+  export_default TIAGO_z "0.2"
+  export_default TIAGO_R "0.0"
+  export_default TIAGO_P "0.0"
+  export_default TIAGO_Y "0.0"
 
   # world arguments
-  export_default WORLD "supermarket"
+  export_default WORLD "maze_wH"
   export_default GZ_GUI "false"
 
   # navigation specific arguments
@@ -37,10 +42,7 @@ init_cmd: |
   export_default LOCAL_PLANNER "teb"
   export_default LOCALIZATION "amcl"
   export_default CONFIG_BASE_PATH "$(rospack find tiago_navigation)"
-  export_default MAP "$HOME/.pal/tiago_maps/configurations/$WORLD"
-  export_default LASER_MODEL "sick-571"
-  export_default RGBD_SENSORS "false"
-  export_default BASE_TYPE "pmb2"
+  export_default MAP "$HOME/.pal/tiago_maps/configurations/maze"
 
 windows:
   - name: roscore
@@ -51,12 +53,12 @@ windows:
   - name: gazebo
     tags: ['core', 'robot', 'nav']
     panes:
-      - 'roslaunch mytiago_gazebo simulation.launch robot:=$TIAGO_TYPE public_sim:=true world:=$WORLD gzpose:=$TIAGO_POSE'
+      - 'roslaunch mytiago_gazebo simulation.launch robot:=$TIAGO_TYPE public_sim:=true world:=$WORLD TIAGO_x:=$TIAGO_x TIAGO_y:=$TIAGO_y TIAGO_z:=$TIAGO_z TIAGO_R:=$TIAGO_R TIAGO_P:=$TIAGO_P TIAGO_Y:=$TIAGO_Y'
   - name: navigation
     tags: ['nav']
     panes:
-      - 'roslaunch tiago_2dnav_gazebo navigation.launch public_sim:=true global_planner:=$GLOBAL_PLANNER local_planner:=$LOCAL_PLANNER localization:=$LOCALIZATION config_base_path:=$CONFIG_BASE_PATH map:=$MAP rgbd_sensors:=$RGBD_SENSORS laser_model:=$LASER_MODEL base_type:=$BASE_TYPE'
+      - 'roslaunch tiago_2dnav_gazebo navigation.launch public_sim:=true global_planner:=$GLOBAL_PLANNER local_planner:=$LOCAL_PLANNER localization:=$LOCALIZATION config_base_path:=$CONFIG_BASE_PATH map:=$MAP'
   - name: rviz
     tags: ['viz']
     panes:
-      - 'rviz -d "$(rospack find mytiago_navigation)/config/rviz/tiago_rviz_sim.rviz"'
+      - 'rviz -d "$(rospack find mytiago_navigation)/config/rviz/tiago_rviz_sim.rviz" --fixed-frame map'
