--- a/mytiago_tmule/tmule/tiago_sim.yaml
+++ b/mytiago_tmule/tmule/tiago_sim.yaml
@@ -44,12 +44,22 @@ init_cmd: |
   export_default CONFIG_BASE_PATH "$(rospack find tiago_navigation)"
   export_default MAP "$HOME/.pal/tiago_maps/configurations/maze"
 
+  # PNP specific arguments
+  export_default PNP_PLANS "$CATKIN_WS/src/myTIAGo/mytiago_plans"
+  export_default PNP_ACTIONS "$CATKIN_WS/src/myTIAGo/mytiago_actions"
+  export_default PNP_CONDITIONS "$CATKIN_WS/src/myTIAGo/mytiago_conditions"
+
 windows:
   - name: roscore
     tags: ['core', 'robot', 'nav']
     panes:
       - roscore
       - htop
+  - name: planning
+    tags: ['core']
+    panes:
+      - 'roslaunch pnp_ros pnp_ros.launch plans_folder:=$PNP_PLANS actions_folder:=$PNP_ACTIONS conditions_folder:=$PNP_CONDITIONS'
+      - 'cd ~/ros_ws/src/myTIAGo/mytiago_plans; echo "Start your plan here, e.g.\n python Inspection.py"'
   - name: gazebo
     tags: ['core', 'robot', 'nav']
     panes:
