--- a/mytiago_tmule/tmule/tiago_sim copy.yaml
+++ b/mytiago_tmule/tmule/tiago_sim copy.yaml
@@ -55,25 +55,20 @@ windows:
     panes:
       - roscore
       - htop
-  # - name: planning
-  #   tags: ['core']
-  #   panes:
-  #     - 'roslaunch pnp_ros pnp_ros.launch plans_folder:=$PNP_PLANS actions_folder:=$PNP_ACTIONS conditions_folder:=$PNP_CONDITIONS'
-  #     - 'cd ~/ros_ws/src/myTIAGo/mytiago_plans; echo "Start your plan here, e.g.\n python Inspection.py"'
-  # - name: gazebo
-  #   tags: ['core', 'robot', 'nav']
-  #   panes:
-  #     - 'roslaunch mytiago_gazebo simulation.launch robot:=$TIAGO_TYPE public_sim:=true world:=$WORLD TIAGO_x:=$TIAGO_x TIAGO_y:=$TIAGO_y TIAGO_z:=$TIAGO_z TIAGO_R:=$TIAGO_R TIAGO_P:=$TIAGO_P TIAGO_Y:=$TIAGO_Y'
-  # - name: navigation
-  #   tags: ['nav']
-  #   panes:
-  #     - 'roslaunch tiago_2dnav_gazebo navigation.launch public_sim:=true global_planner:=$GLOBAL_PLANNER local_planner:=$LOCAL_PLANNER localization:=$LOCALIZATION config_base_path:=$CONFIG_BASE_PATH map:=$MAP'
-  # - name: rviz
-  #   tags: ['viz']
-  #   panes:
-  #     - 'rviz -d "$(rospack find mytiago_navigation)/config/rviz/tiago_rviz_sim.rviz" --fixed-frame map'
-  - name: pedsim
+  - name: planning
+    tags: ['core']
+    panes:
+      - 'roslaunch pnp_ros pnp_ros.launch plans_folder:=$PNP_PLANS actions_folder:=$PNP_ACTIONS conditions_folder:=$PNP_CONDITIONS'
+      - 'cd ~/ros_ws/src/myTIAGo/mytiago_plans; echo "Start your plan here, e.g.\n python Inspection.py"'
+  - name: gazebo
+    tags: ['core', 'robot', 'nav']
+    panes:
+      - 'roslaunch mytiago_gazebo simulation.launch robot:=$TIAGO_TYPE public_sim:=true world:=$WORLD TIAGO_x:=$TIAGO_x TIAGO_y:=$TIAGO_y TIAGO_z:=$TIAGO_z TIAGO_R:=$TIAGO_R TIAGO_P:=$TIAGO_P TIAGO_Y:=$TIAGO_Y'
+  - name: navigation
+    tags: ['nav']
+    panes:
+      - 'roslaunch tiago_2dnav_gazebo navigation.launch public_sim:=true global_planner:=$GLOBAL_PLANNER local_planner:=$LOCAL_PLANNER localization:=$LOCALIZATION config_base_path:=$CONFIG_BASE_PATH map:=$MAP'
+  - name: rviz
     tags: ['viz']
     panes:
-      - 'rosrun pedsim_gazebo_plugin spawn_pedsim_agents.py'
-      - 'roslaunch pedsim_gazebo_plugin single_agent_avoidance.launch'
+      - 'rviz -d "$(rospack find mytiago_navigation)/config/rviz/tiago_rviz_sim.rviz" --fixed-frame map'
