--- a/mytiago_pedsim/package.xml
+++ b/mytiago_pedsim/package.xml
@@ -1,58 +1,36 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>mytiago_pedsim</name>
   <version>0.0.0</version>
   <description>The mytiago_pedsim package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
-  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="lcastri@lincoln.ac.uk">Luca Castri</maintainer>
-
-
-  <!-- One license tag required, multiple allowed, one license per tag -->
-  <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
   <license>TODO</license>
 
-
-  <!-- Url tags are optional, but multiple are allowed, one per tag -->
-  <!-- Optional attribute type can be: website, bugtracker, or repository -->
-  <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/lindimp_bringup</url> -->
-
-
-  <!-- Author tags are optional, multiple are allowed, one per tag -->
-  <!-- Authors do not have to be maintainers, but could be -->
-  <!-- Example: -->
-  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
-
-
-  <!-- The *_depend tags are used to specify dependencies -->
-  <!-- Dependencies can be catkin packages or system dependencies -->
-  <!-- Examples: -->
-  <!-- Use build_depend for packages you need at compile time: -->
-  <!--   <build_depend>message_generation</build_depend> -->
-  <!-- Use buildtool_depend for build tool packages: -->
-  <!--   <buildtool_depend>catkin</buildtool_depend> -->
-  <!-- Use run_depend for packages you need at runtime: -->
-  <!--   <run_depend>message_runtime</run_depend> -->
-  <!-- Use test_depend for packages you need only for testing: -->
-  <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <!-- <build_depend>strands_navigation</build_depend>
-  <build_depend>strands_social</build_depend>
-  <build_depend>strands_ui</build_depend>
-  <build_depend>strands_bringup</build_depend> -->
-  <!-- <run_depend>strands_navigation</run_depend> -->
-  <!-- <run_depend>strands_social</run_depend> -->
-  <!-- <run_depend>strands_ui</run_depend> -->
-  <!-- <run_depend>strands_bringup</run_depend> -->
+  <build_depend>gazebo_ros</build_depend>
+  <build_depend>roscpp</build_depend>
+
+<build_depend>pedsim_msgs</build_depend>
+<build_depend>geometry_msgs</build_depend>
+
+  <build_export_depend>gazebo_ros</build_export_depend>
+  <build_export_depend>roscpp</build_export_depend>
+  <build_export_depend>geometry_msgs</build_export_depend>
+  <build_export_depend>pedsim_msgs</build_export_depend>
+
+
+  <exec_depend>gazebo_ros</exec_depend>
+  <exec_depend>roscpp</exec_depend>
+  <exec_depend>pedsim_msgs</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
-    <!-- Other tools can request additional information be placed here -->
-
+    <!-- <gazebo_ros plugin_path="${prefix}/../../lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/> -->
   </export>
 </package>
