--- a/tiago_docker/Dockerfile
+++ b/tiago_docker/Dockerfile
@@ -85,6 +85,7 @@ COPY mytiago_pedsim/modified_scripts/config.h /root/ros_ws/src/pedsim_ros/pedsim
 COPY mytiago_pedsim/modified_scripts/keyboard_teleop.py /root/ros_ws/src/pedsim_ros/pedsim_simulator/scripts
 COPY mytiago_pedsim/modified_scripts/simulate_diff_drive_ped.cpp /root/ros_ws/src/pedsim_ros/pedsim_simulator/src
 COPY mytiago_pedsim/modified_scripts/CMakeLists.txt /root/ros_ws/src/pedsim_ros/pedsim_simulator/
+COPY mytiago_pedsim/modified_scripts/spawn_pedsim_agents.py /root/ros_ws/src/pedsim_ros/pedsim_gazebo_plugin/scripts
 
 # Copy files into the image
 RUN mkdir -p ~/ros_ws/src/myTIAGo/
