--- a/tiago_docker/Dockerfile
+++ b/tiago_docker/Dockerfile
@@ -82,10 +82,13 @@ RUN cd ~/ros_ws && \
 RUN DEBIAN_FRONTEND=noninteractive pip install jpype1
 RUN DEBIAN_FRONTEND=noninteractive pip install mpmath
 RUN cd ~/ros_ws/IDTxl && pip install .
-RUN echo pipp
+RUN echo BLABLA
 RUN cd ~/ros_ws/ && \
     git clone -b causal-hri https://github.com/lcastri/fpcmci.git && \
     cd ~/ros_ws/fpcmci && pip install --use-pep517 .
+
+# Installing pkgs for postprocessing
+RUN DEBIAN_FRONTEND=noninteractive pip install shapely
 
 # Clone and install pedsim
 RUN cd ~/ros_ws/src/ && \
@@ -134,7 +137,6 @@ RUN echo "export GAZEBO_MODEL_PATH=~/.gazebo/models:$GAZEBO_MODEL_PATH" >> ~/.ba
 
 # Create a shared folder with the host machine
 RUN mkdir -p ~/shared
-
 
 # Set the entrypoint to run the script
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
