--- a/mytiago_tmule/tmule/tiago_sim.yaml
+++ b/mytiago_tmule/tmule/tiago_sim.yaml
@@ -89,15 +89,12 @@ windows:
   - name: pedsim
     tags: ['pedsim']
     panes:
-      # - 'rosrun pedsim_simulator keyboard_teleop.py'
       - 'roslaunch mytiago_pedsim mysimulator.launch scenario:=$SCENARIO robot_mode:=$ROBOT_MODE max_robot_speed:=$MAX_ROBOT_SPEED robot_radius:=$ROBOT_RADIUS kbd_teleop:=$KBD_TELEOP with_ped:=$WITH_PED ped_x:=$HUMAN_x ped_y:=$HUMAN_y ped_theta:=0'
-  # - name: recording
-  #   tags: ['rec']
-  #   panes:
-  #     - 'cd ~/shared; echo -e "\033[1;31mLaunch here the recording launch file: roslaunch mytiago_recording recording.launch bagname:=BAGNAME\033[0m"'
+      - 'roslaunch mytiago_risk risk.launch'
   - name: experiment
     tags: ['rec']
     panes:
       - 'cd ~/ros_ws/src/myTIAGo/mytiago_plans; echo -e "\033[1;31mStart your plan here: python PassByTheCentre.py nRepetition Bagname, e.g.\n python PassByTheCentre.py 8 robotPriority\033[0m"'
       - 'rosrun pedsim_simulator keyboard_teleop.py'
-      # - 'cd ~/shared; echo -e "\033[1;31mLaunch here the recording launch file: roslaunch mytiago_recording recording.launch bagname:=BAGNAME\033[0m"'
+      - 'cd ~/ros_ws/src/myTIAGo/mytiago_causal_discovery; echo -e "\033[1;31mStart your data collector node\033[0m"'
+      - 'cd ~/ros_ws/src/myTIAGo/mytiago_causal_discovery; echo -e "\033[1;31mStart your causal discovery node\033[0m"'
