--- a/myTIAGo/mytiago_human/package.xml
+++ b/myTIAGo/mytiago_human/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>mytiago_risk</name>
+  <name>mytiago_human</name>
   <version>0.0.0</version>
-  <description>The mytiago_risk package</description>
+  <description>The mytiago_human package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -13,21 +13,18 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>rospy</build_depend>
   <build_depend>geometry_msgs</build_depend>
-  <build_depend>visualization_msgs</build_depend>
   <build_depend>pedsim_msgs</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>std_msgs</build_depend>
 
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
-  <build_export_depend>visualization_msgs</build_export_depend>
   <build_export_depend>pedsim_msgs</build_export_depend>
   <build_export_depend>message_generation</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
 
   <exec_depend>rospy</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
-  <exec_depend>visualization_msgs</exec_depend>
   <exec_depend>pedsim_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>message_runtime</exec_depend>
